# void-scrubbers

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: build-backend.yml  deploy-frontend.yml
backend/: .env.example  Cargo.toml  Dockerfile  README.md
backend/src/: config.rs  error.rs  main.rs
backend/src/auth/: mod.rs
backend/src/controllers/: factories.rs  mod.rs  robots.rs  users.rs  world.rs
backend/src/db/: mod.rs
backend/src/models/: mod.rs
backend/src/routes/: health.rs  mod.rs
backend/src/services/: factories.rs  mod.rs  robots.rs  users.rs  world.rs
backend/src/websocket/: mod.rs
frontend/: .env.example  .eslintrc.cjs  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.ts  main.ts
frontend/src/assets/audio/music/: main_theme.json
frontend/src/assets/audio/songs/: city_loop.json
frontend/src/assets/sprites/: robo_1.piskel  tile.piskel  void_palette.gpl
frontend/src/components/: AbstractComponent.ts  Button.ts  Log.ts  Player.ts  SoundButton.ts  Viewport.ts
frontend/src/game/: AudioLibrary.ts  GamepadController.ts  GenericGamepadMapper.ts  GlobalGamepadListener.ts  KeyboardMouseController.ts  PlayerManager.ts  RandomTileMapSource.ts  SceneManager.ts  TileMapRenderer.ts
frontend/src/network/: ApiClient.ts  WebSocketClient.ts  apiFetch.ts  apiUtils.ts
frontend/src/scenes/: GameWorld.ts  PlayerSelectScene.ts  TitleScene.ts
frontend/src/shaders/: OutlineShader.ts
frontend/src/store/: GlobalPlayerManager.ts
frontend/src/types/: ControllerManager.ts  GamepadState.ts  GamepadStateMapper.ts  PlayerSeat.ts  Scene.ts  TileMapSource.ts  WorldPositionable.ts
frontend/src/types/events/: AbsoluteAimEvent.ts  ButtonDownEvent.ts  ButtonEvent.ts  ButtonUpEvent.ts  ControllerEvent.ts  KeyboardButtonPressedEvent.ts  MenuAcceptEvent.ts  MenuDirectionEvent.ts  MenuEvent.ts  MenuRejectEvent.ts  RelativeAimEvent.ts  VelocityEvent.ts
frontend/src/utils/: gamepad.ts  theme.ts
