[package]
name = "void-scrubbers-backend"
version = "0.1.0"
edition = "2021"
authors = ["Void Scrubbers Team"]
description = "Backend server for Void Scrubbers game"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rocket_contrib = "0.4.11"
tokio = { version = "1.35.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "time"] }
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
bcrypt = "0.15.0"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
thiserror = "1.0.50"
anyhow = "1.0.75"
futures = "0.3.29"
async-trait = "0.1.74"
config = "0.13.4"
lazy_static = "1.4.0"
tungstenite = "0.20.1"
tokio-tungstenite = "0.20.1"

[dev-dependencies]
mockall = "0.12.0"
rstest = "0.18.2"
tokio-test = "0.4.3"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
