[package]
name = "void-scrubbers-backend"
version = "0.1.0"
edition = "2021"
authors = ["Void Scrubbers Team"]
description = "Backend server for Void Scrubbers game"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "time"] }
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
bcrypt = "0.15.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
thiserror = "1.0.58"
anyhow = "1.0.86"
futures = "0.3.30"
async-trait = "0.1.79"
config = "0.14.0"
lazy_static = "1.4.0"
tungstenite = "0.21.0"
tokio-tungstenite = "0.21.0"
chrono = { version = "0.4.35", features = ["serde"] }

[dev-dependencies]
mockall = "0.12.1"
rstest = "0.25.0"
tokio-test = "0.4.3"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
